--- a/SignalRAssignment/Pages/ProductPages/Create.cshtml
+++ b/SignalRAssignment/Pages/ProductPages/Create.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model SignalRAssignment.Pages.CreateModel
+@model SignalRAssignment.Pages.ProductPages.CreateModel
 
 @{
     ViewData["Title"] = "Create";
