--- a/SignalRAssignment/Pages/ProductPages/Edit.cshtml
+++ b/SignalRAssignment/Pages/ProductPages/Edit.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model SignalRAssignment.Pages.EditModel
+@model SignalRAssignment.Pages.ProductPages.EditModel
 
 @{
     ViewData["Title"] = "Edit";
