--- a/SignalRAssignment/Pages/ProductPages/Delete.cshtml
+++ b/SignalRAssignment/Pages/ProductPages/Delete.cshtml
@@ -1,12 +1,13 @@
 ﻿@page
-@model SignalRAssignment.Pages.DetailsModel
+@model SignalRAssignment.Pages.ProductPages.DeleteModel
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Delete";
 }
 
-<h1>Details</h1>
+<h1>Delete</h1>
 
+<h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Product</h4>
     <hr />
@@ -48,8 +49,10 @@
             @Html.DisplayFor(model => model.Product.Supplier.Address)
         </dd>
     </dl>
-</div>
-<div>
-    <a asp-page="./Edit" asp-route-id="@Model.Product?.ProductId">Edit</a> |
-    <a asp-page="./Index">Back to List</a>
+    
+    <form method="post">
+        <input type="hidden" asp-for="Product.ProductId" />
+        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <a asp-page="./Index">Back to List</a>
+    </form>
 </div>
