--- a/SignalRAssignment/Pages/ProductPages/Details.cshtml
+++ b/SignalRAssignment/Pages/ProductPages/Details.cshtml
@@ -1,13 +1,12 @@
 ﻿@page
-@model SignalRAssignment.Pages.DeleteModel
+@model SignalRAssignment.Pages.ProductPages.DetailsModel
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Details";
 }
 
-<h1>Delete</h1>
+<h1>Details</h1>
 
-<h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Product</h4>
     <hr />
@@ -49,10 +48,8 @@
             @Html.DisplayFor(model => model.Product.Supplier.Address)
         </dd>
     </dl>
-    
-    <form method="post">
-        <input type="hidden" asp-for="Product.ProductId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-page="./Index">Back to List</a>
-    </form>
+</div>
+<div>
+    <a asp-page="./Edit" asp-route-id="@Model.Product?.ProductId">Edit</a> |
+    <a asp-page="./Index">Back to List</a>
 </div>
