--- a/SignalRAssignment/Pages/Shared/_Layout.cshtml
+++ b/SignalRAssignment/Pages/Shared/_Layout.cshtml
@@ -27,6 +27,8 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/SupplierPages/Index">Supplier</a>
+                        </li><li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/LoginPage/LoginForm">Login</a>
                         </li>
                     </ul>
                 </div>
