--- a/SignalRAssignment/Pages/Shared/_Layout.cshtml
+++ b/SignalRAssignment/Pages/Shared/_Layout.cshtml
@@ -1,4 +1,7 @@
-﻿<!DOCTYPE html>
+﻿@using Repository.Model
+@using Microsoft.AspNetCore.Http
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -27,9 +30,20 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/SupplierPages/Index">Supplier</a>
-                        </li><li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/LoginPage/LoginForm">Login</a>
-                        </li>
+                            @if (Context.Session.GetString("UserSession") != null)
+                            {
+                                var userSession = Context.Session.GetString("UserSession");
+                                var user = System.Text.Json.JsonSerializer.Deserialize<Account>(userSession);
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="">Hello , @user.FullName</a>
+                            </li>
+                            }
+                            else
+                            {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-page="/LoginPage/LoginForm">Login</a>
+                            </li>
+                            }
                     </ul>
                 </div>
             </div>
