--- a/SignalRAssignment/Pages/CustomerPages/Index.cshtml
+++ b/SignalRAssignment/Pages/CustomerPages/Index.cshtml
@@ -14,7 +14,7 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Customer[0].Password)
+                @Html.DisplayNameFor(model => model.Customer[0].CustomerId)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Customer[0].ContactName)
@@ -32,7 +32,7 @@
 @foreach (var item in Model.Customer) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Password)
+                    @Html.DisplayFor(modelItem => item.CustomerId)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.ContactName)
