--- a/SignalRAssignment/Pages/SupplierPages/Index.cshtml
+++ b/SignalRAssignment/Pages/SupplierPages/Index.cshtml
@@ -14,6 +14,9 @@
     <thead>
         <tr>
             <th>
+                @Html.DisplayNameFor(model => model.Supplier[0].SupplierId)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Supplier[0].CompanyName)
             </th>
             <th>
@@ -28,6 +31,9 @@
     <tbody>
 @foreach (var item in Model.Supplier) {
         <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.SupplierId)
+            </td> 
             <td>
                 @Html.DisplayFor(modelItem => item.CompanyName)
             </td>
