--- a/SignalRAssignment/Pages/ProductPages/Create.cshtml
+++ b/SignalRAssignment/Pages/ProductPages/Create.cshtml
@@ -14,32 +14,32 @@
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Product.ProductName" class="control-label"></label>
-                <input asp-for="Product.ProductName" class="form-control" />
-                <span asp-validation-for="Product.ProductName" class="text-danger"></span>
+                <label asp-for="Products.ProductName" class="control-label"></label>
+                <input asp-for="Products.ProductName" class="form-control" />
+                <span asp-validation-for="Products.ProductName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Product.SupplierId" class="control-label"></label>
-                <select asp-for="Product.SupplierId" class ="form-control" asp-items="ViewBag.SupplierId"></select>
+                <label asp-for="Products.SupplierId" class="control-label"></label>
+                <select asp-for="Products.SupplierId" class ="form-control" asp-items="ViewBag.SupplierId"></select>
             </div>
             <div class="form-group">
-                <label asp-for="Product.CategoryId" class="control-label"></label>
-                <select asp-for="Product.CategoryId" class ="form-control" asp-items="ViewBag.CategoryId"></select>
+                <label asp-for="Products.CategoryId" class="control-label"></label>
+                <select asp-for="Products.CategoryId" class ="form-control" asp-items="ViewBag.CategoryId"></select>
             </div>
             <div class="form-group">
-                <label asp-for="Product.QuantityPerUnit" class="control-label"></label>
-                <input asp-for="Product.QuantityPerUnit" class="form-control" />
-                <span asp-validation-for="Product.QuantityPerUnit" class="text-danger"></span>
+                <label asp-for="Products.QuantityPerUnit" class="control-label"></label>
+                <input asp-for="Products.QuantityPerUnit" class="form-control" />
+                <span asp-validation-for="Products.QuantityPerUnit" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Product.UnitPrice" class="control-label"></label>
-                <input asp-for="Product.UnitPrice" class="form-control" />
-                <span asp-validation-for="Product.UnitPrice" class="text-danger"></span>
+                <label asp-for="Products.UnitPrice" class="control-label"></label>
+                <input asp-for="Products.UnitPrice" class="form-control" />
+                <span asp-validation-for="Products.UnitPrice" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Product.ProductImage" class="control-label"></label>
-                <input asp-for="Product.ProductImage" class="form-control" />
-                <span asp-validation-for="Product.ProductImage" class="text-danger"></span>
+                <label asp-for="Products.ProductImage" class="control-label"></label>
+                <input asp-for="Products.ProductImage" class="form-control" />
+                <span asp-validation-for="Products.ProductImage" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
